[gd_scene load_steps=2 format=3 uid="uid://cep8prwtmd5yt"]

[ext_resource type="Script" uid="uid://dayj8xgk0veh3" path="res://scenes/menu/stats_container.gd" id="1_2ds8n"]

[node name="StatsContainer" type="VBoxContainer"]
script = ExtResource("1_2ds8n")

[node name="HPLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 999"

[node name="MPLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "MP: 999"

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Level: 999"

[node name="ExpLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Exp: 999"

[node name="LimitLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Limit: 99%"

[node name="StrengthLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Strength: 999"

[node name="WisdomLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Wisdom: 999"

[node name="DefenseLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Defence: 999"

[node name="GoldLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 999"
